--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   pull_to_refresh: ^2.0.0
   get_it: ^9.2.0
   provider: ^6.1.5+1
+  
+  # Responsive Design
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
