feat: Add PDF export with Arabic support and company letterhead system
✨ Features:
- PDF generation with Arabic font support using pdf package
- Barcode generation with Hijri/Gregorian dates
- Company letterhead template system with positioning options
- Letterhead setup page with 3-step wizard
- Updated company repository with letterhead methods
- Enhanced Laravel PDF template with barcode support

🔧 Technical Changes:
- Added pdf, printing, barcode packages to pubspec.yaml
- Created PdfService for Arabic-compatible PDF generation
- Created BarcodeService with date conversion utilities
- Added LetterheadSetupPage with step-by-step configuration
- Extended CompanyBloc with letterhead setup events/states
- Updated CompanyRepository and DataSource interfaces
- Enhanced Laravel LetterApiController PDF generation
- Added Arabic fonts configuration in assets

📱 Mobile App:
- Letterhead upload and configuration
- Barcode positioning (left/right) with margins
- Display toggles for barcode, dates, subject
- Preview functionality in setup wizard
- Integration with existing company settings flow

--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -53,8 +53,14 @@ dependencies:
   path_provider: ^2.1.1
   open_file: ^3.3.2
   
-  # PDF
+  # PDF & Printing
   flutter_pdfview: ^1.3.2
+  pdf: ^3.10.7
+  printing: ^5.12.0
+  
+  # Barcode Generation
+  barcode: ^2.2.7
+  qr_flutter: ^4.1.0
   
   # Image Picker
   image_picker: ^1.0.7
@@ -82,6 +88,11 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - assets/fonts/
 
-  # Using Google Fonts package for Cairo font
-  # No local fonts needed
+  fonts:
+    - family: NotoSansArabic
+      fonts:
+        - asset: assets/fonts/NotoSansArabic-Regular.ttf
+        - asset: assets/fonts/NotoSansArabic-Bold.ttf
+          weight: 700
