--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
   # Image Picker
   image_picker: ^1.0.7
   
+  # Document Scanner
+  document_scanner_flutter: ^0.3.0
+  file_picker: ^6.1.1
+  
   # Pull to Refresh
   pull_to_refresh: ^2.0.0
   get_it: ^9.2.0
